--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -1,10 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11520165.md#1" target="_blank">内幕：川普将华为放黑名单背后有三大考虑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11520165.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/Huawei-1128822574-600x400-1-150x120.jpg" align ="left"></a>负责国际安全与防核武扩散事务的美国助理国务卿克里斯托弗?福特（Christopher Ford）9月11日发表讲话强调，华为给美国带来的核心挑战并非是技术而是政治和地缘政治挑战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 12:08 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11518812.md#1" target="_blank">中秋月圆 逾40国法轮功学员问候李洪志师父</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11518812.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190902022412100649-2-150x120.jpg" align ="left"></a>在中秋月圆、举家团圆之时，海外法轮功学员思念、感恩李洪志师父，并敬祝师父中秋快乐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 9:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520987.md#1" target="_blank">前知名媒体人张贾龙中秋节遭中共正式逮捕</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520987.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/3682004dc21fcaf8c86867bb4b3208c3-600x400-150x120.jpg" align ="left"></a>9月13日中秋节，前腾讯财经记者张贾龙遭到中共贵州贵阳警方正式逮捕，原因不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 4:13 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11520216.md#1" target="_blank">清华等高校教育界弟子祝李洪志师父中秋好</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11520216.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2019-9-12-1909111134129458-150x120.jpg" align ="left"></a>9月13日中秋佳节，大陆各行各种的法轮功学员纷纷通过明慧网，向法轮功创始人李洪志先生表达节日祝贺。其中包括各大高校，教育届的法轮功学员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 3:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520622.md#1" target="_blank">北京汉能拖欠员工薪资 突然停工休假引质疑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520622.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/IMG_8359-150x120.jpg" align ="left"></a>近期，大陆知名的汉能集团陷入欠薪门，员工四个月工资未发，纷纷到北京总部艰难维权，过程中受到打压。9月12日，集团突然下达停工放假通知引发员工的质疑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 2:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520361.md#1" target="_blank">上海访民进京被抓 遭遣返后刑拘1个月</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-13-150x120.jpg" align ="left"></a>近日，上海嘉定区江桥镇维权人士浦美英，在北京马路上被警察查身份证后带往天安门分局，后由上海驻京办警察押送回上海，以“寻衅滋事罪”刑事拘留1个月。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 11:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11520112.md#1" target="_blank">香港人启动B计划 转移资产或移民他国</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11520112.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190908223955100484-150x120.jpg" align ="left"></a>香港的抗议活动从夏季延伸到秋季，似乎仍没有解决的迹象。香港人申请移民他国的数量激增，表明更多的当地人正计划离开香港。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 7:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11519340.md#1" target="_blank">中秋节 大陆异见人士家属寄语狱中亲人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11519340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/cats-2-150x120.jpg" align ="left"></a>中秋佳节阖家团圆之际，在大陆被中共迫害入狱的众多异见人士及亲人，仍承受着离别之苦。中秋夜，她们通过大纪元向亲人传递思念和问候，并向给予关心的朋友们送去节日的祝福。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 2:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/12/n11517714.md#1" target="_blank">王立军助手 江苏省公安厅长王立科被举报</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/12/n11517714.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-160-800x450-1-150x120.jpg" align ="left"></a>近日，海外明慧网收到大陆民众举报现任江苏省省长助理、江苏省公安厅厅长王立科迫害大陆百姓信仰自由的材料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月13日 2:45 PM							</td></tr>
@@ -26,6 +20,14 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512346.md#1" target="_blank">人权组织拟向美英多国提请制裁央视记者董倩</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/ss-2-150x120.jpg" align ="left"></a>国际人权组织“保护卫士”目前正筹备向美国、英国等多国申请依据《全球马格尼茨基人权问责法》及类似法律制裁中国央视知名记者董倩，指控主要是基于董倩主持央视“电视认罪”节目的行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 3:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512215.md#1" target="_blank">中共上新闻审查最恶劣名单 监禁记者数最多</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512215.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/AFP-150x120.jpg" align ="left"></a>总部设在纽约的保护记者委员会（CPJ）周二（9月10日）公布全球新闻审查最恶劣的十大国家名单，中共治下的中国名列第5，是近20年来监禁记者人数最多的国家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 11:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11510988.md#1" target="_blank">外国人支持香港抗争 中国机场险被拘</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11510988.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/LL-2019-09-07-at-9.59.33-PM_meitu_1-150x120.jpg" align ="left"></a>“我想纽约，我决定不在中国定居。”汤姆先生（Tom）是一名土生地长的纽约人，他也是一个中国通，可以讲一口流利的中文，喜欢在大陆和台湾旅游。今年夏天，他到中国旅游时，因为发表支持香港反送中的言论，微信遭删除，在机场被举报还险些被拘留。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 10:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511790.md#1" target="_blank">法轮功将向美移民局提供在美迫害者名单</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511790.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/111208183054100445-600x400-150x120.jpg" align ="left"></a>明慧网在发布收集严重迫害法轮功学员的恶人名单《通告》，侧重于限制恶人入境美国之后，现在需要收集已经进入美国的恶人的名单。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 9:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511885.md#1" target="_blank">港府已偷偷执行紧急法？某VPN香港受阻</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511885.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/7f680532e307b97a065e73919e4454c6-150x120.jpg" align ="left"></a>香港政府曾表示，香港政府或引用“紧急法”来控制反送中运动，在必要时对互联网服务进行限制。VPNCompare网站的编辑DAVID SPENCER9月9日撰文说，港府的“封网”工作似乎已经开始，而首当其冲的是VPN服务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 8:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11510719.md#1" target="_blank">中共用微波技术“脑控” 亲历者揭密（上）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11510719.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/d4287866df1590790f068242e5b8aa26-150x120.png" align ="left"></a>近年来，由于脑控受害者的不断维权，被中共有意混淆、掩盖的“脑控”真相逐渐被揭开。中国某大型报业集团的一位高级职员披露了他被脑控的亲身经历，以此呼吁国际社会关注中共用脑控（微波技术）实施迫害这一反人类的罪恶。
+
+王先生曾是中国某大型报业集团体育部主任，2015年调往该集团下属的印务总公司做老总。他告诉大纪元记者，2016年开始，他遭到一种类似像幻听的“脑控.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 1:42 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11510655.md#1" target="_blank">美前防长：中共违反一国两制 美应支持港人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11510655.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/06/39846792990_06aa64e5a5_k-600x400-150x120.jpg" align ="left"></a>美国前国防部长吉姆?马蒂斯（Jim Mattis）周一（9月9日）表示，香港抗议活动中国内部问题（中国内政），中共通过《引渡法案》修例，违反了“一国两制”，美国应该支持坚持人权的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 8:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/9/n11510236.md#1" target="_blank">【新闻看点】十一将至 中共神经紧绷在防谁？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/9/n11510236.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/ccp_fear-150x120.jpg" align ="left"></a>7日的晚上到昨天（8日）的凌晨，中共进行了十一阅兵的第一场彩排，央视昨天称有大约9万人参加了这次演练和现场保障工作。据了解，像这样的全流程演练，在正式阅兵前还将举行2次，每次都是长时间、大片区域实行交通管制。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 5:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/9/n11509658.md#1" target="_blank">十一前 当局疯狂打压异见人士及访民</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/9/n11509658.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/page-1-150x120.jpg" align ="left"></a>今年十一是中共建政70周年，加之持续的香港反送中运动令中共内外交困，提前在各地加强对异见人士、访民的监控，限制人身自由及言论自由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 4:09 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/12/n11516802.md#1" target="_blank">韩国大法弟子恭祝李洪志师尊中秋好</a><br></h3>二零一九年中秋节之际，明慧网收到了来自中国大陆30个省、自治区、直辖市大法弟子敬献师尊的节日祝贺，恭祝慈悲伟大的师父中秋节快乐！以下是韩国部分大法弟子发来的贺卡贺词。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月12日 9:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511984.md#1" target="_blank">昆明69岁法轮功学员李竹秀 遭枉判3年半</a><br></h3>云南昆明市69岁的法轮功学员李竹秀，只因坚持信仰“真、善、忍”，于8月30日被昆明市宜良县法院非法判刑3年6个月、罚金5,000元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 12:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511896.md#1" target="_blank">北京顺义8名法轮功学员遭绑架 4人仍被关押</a><br></h3>9月5日上午8点左右，北京市顺义区李遂派出所、张镇派出所、仁和镇派出所、木林镇派出所警察在同一时间出动大量的警察，绑架了顺义8名法轮功学员，至今仍有4人被非法关押。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 10:04 PM							</td></tr>
